--- a/maps/regionmap.html
+++ b/maps/regionmap.html
@@ -87,7 +87,8 @@
 
 
 	// Normal Markers
-
+	L.marker([20.71, -27.00]).addTo(map).bindPopup('<b>Shaded Vale</b>')//.openPopup();
+    	L.marker([20.71, 6.21]).addTo(map).bindPopup('<b>Chicken Yas</b>')//.openPopup();
 
 	// Special Cords Marker Function
 	marker.on('dragend', function(e) {
