--- a/races/peoples.html
+++ b/races/peoples.html
@@ -114,4 +114,5 @@
 <p><a href="../races/fairy.html">Fairies</a> - Common divine messangers who occasionaly accuire free will.</p>
 <p><a href="../races/greyelf.html">Grey Elves</a> - A mysterious and otherworldly elven subspecies known for their artifical body parts and mysterious orgins.</p>
 <p><a href="../races/succubi.html">Succubi</a> - Deamons freed from their duities to hell who now seek to protect children, and get adults to lighten the hell up in reguards to many topics.</p>
+<p><a href="../races/dragonette.html">Dragonettes</a> - Small wingless dragons with a penchent for tall tales and music.</p>
 </div>
