--- a/races/goblin.html
+++ b/races/goblin.html
@@ -28,11 +28,11 @@
 
 <figure class="right">
 <figcaption class="basic"><b>A Goblin.</b></figcaption>
-<img style="width:100%" title="A Goblin." src="..\img\races\gobbo1.jpg" alt="A Goblin." />
+<img style="width:100%" title="A Goblin." src="..\img\races\gobbo1a.jpg" alt="A Goblin." />
 </figure>
 <figure class="left">
 <figcaption class="basic"><b>An adolessent Goblin.</b></figcaption>
-<img style="width:100%" title="An adolessent Goblin." src="..\img\races\gobbo2.jpg" alt="An adolessent Goblin." />
+<img style="width:100%" title="Another Goblin." src="..\img\races\gobbo2a.jpg" alt="An adolessent Goblin." />
 </figure>
 
 
