--- a/races/goblin.html
+++ b/races/goblin.html
@@ -31,7 +31,7 @@
 <img style="width:100%" title="A Goblin." src="..\img\races\gobbo1a.jpg" alt="A Goblin." />
 </figure>
 <figure class="left">
-<figcaption class="basic"><b>An adolessent Goblin.</b></figcaption>
+<figcaption class="basic"><b>Another Goblin.</b></figcaption>
 <img style="width:100%" title="Another Goblin." src="..\img\races\gobbo2a.jpg" alt="An adolessent Goblin." />
 </figure>
 
