--- a/maps/mapviewer.html
+++ b/maps/mapviewer.html
@@ -18,7 +18,7 @@
     border: 0;
   }
 </style>
-</head>
+</head><script src="../scripts/darkmode.js"></script>
 <body>
    <iframe src="regionmap.html#25.55903,-0.01439,4z" frameborder="0" title="EyomMap"></iframe>
 </body>
