--- a/maps/scholarsmap.html
+++ b/maps/scholarsmap.html
@@ -11,7 +11,7 @@
 <script src="js/rulerplugin/Leaflet.LinearMeasurement.js"></script>
 <script src="js/permalink/leaflet.permalink.min.js"></script>
 
-</head>
+</head><script src="../scripts/darkmode.js"></script>
 <body style="height: 100%; margin: 0; background-image: url('../img/bookpage.jpg'); background-size: 100% 100%;">
 
 <div id="map" style="width: 100%; height: 100%; background: rgba(255,0,0,0.0);"></div>
